** saving an iteration from this afternoon on the Dalton bibliography file    and on the description of new features. *  Updated some references which were "Submitted" and the like in 2005 *  Added some new references *  This one I couldn't find on the web, so I assume it was never    published and have marked it "Unpublished" instead of "To be submitted"
    TITLE   = {Coupled-cluster singles-and-doubles calculations of atomic charges
               from {Atomic Polar Tensors}},
    YEAR    = 2005,
-   NOTE    = {To be submitted} }
+   NOTE    = {Unpublished} }

--- a/Doc/dalton.bib
+++ b/Doc/dalton.bib
@@ -989,7 +989,7 @@
    TITLE   = {Coupled-cluster singles-and-doubles calculations of atomic charges
               from {Atomic Polar Tensors}},
    YEAR    = 2005,
-   NOTE    = {To be submitted} }
+   NOTE    = {Unpublished} }
 
 @ARTICLE{Head-Gordon:94,
    AUTHOR  = {M.~Head-Gordon and R.~J.~Rico and M.~Oumi
@@ -1577,12 +1577,37 @@
    PAGES   = 1}
 
 @Article{pndmbhjajjojcp115,
-  author =   {P.~Norman and D.~M.~Bishop and H.~J.~Aa.~Jensen and
-                  J.~Oddershede},
-  journal =  jcp,
-  year =     {2001},
-  volume =   {115},
-  pages =    {10323}
+author = {Patrick Norman and David M. Bishop and Hans J\o rgen Aa.
+Jensen and Jens Oddershede},
+title = {Near-resonant absorption in the time-dependent self-consistent
+field and multiconfigurational self-consistent field approximations},
+year = {2001},
+journal = {The Journal of Chemical Physics},
+volume = {115},
+number = {22},
+pages = {10323-10334},
+keywords = {organic compounds; hydrogen compounds; SCF calculations;
+polarisability; nonlinear optics},
+url = {http://link.aip.org/link/?JCP/115/10323/1},
+doi = {10.1063/1.1415081}
+}
+
+@article{pndmbhjajjojcp123,
+author = {Patrick Norman and David M. Bishop and Hans J{\o}rgen Aa. Jensen
+and Jens Oddershede},
+title = {Nonlinear response theory with relaxation: The first-order
+hyperpolarizability},
+year = {2005},
+journal = jcp,
+volume = {123},
+number = {19},
+eid = {194103},
+numpages = {18},
+pages = {194103},
+keywords = {organic compounds; lithium compounds; Kerr electro-optical
+effect; polarisability; optical harmonic generation; electric moments},
+url = {http://link.aip.org/link/?JCP/123/194103/1},
+doi = {10.1063/1.2107627}
 }
 
 @Article{pnkrthjcp120,
@@ -1648,17 +1673,42 @@
 % * P *
 % *****
 %
-@MISC{mjpekdtehjajjojcp,
-   AUTHOR = {M.~J.~Packer and E.~K.~Dalskov and T.~Enevoldsen and
-             H.~J.~Aa.~Jensen and J.~Oddershede},
-   NOTE   = {J.~Chem.~Phys., submitted}}
+@article{mjpekdtehjajjojcp,
+author = {Martin J. Packer and Erik K. Dalskov and Thomas Enevoldsen and
+Hans J{\o}rgen Aa. Jensen and Jens Oddershede},
+title = {A new implementation of the second-order polarization
+propagator approximation (SOPPA): The excitation spectra of benzene and
+naphthalene},
+year = {1996},
+journal = {The Journal of Chemical Physics},
+volume = {105},
+number = {14},
+pages = {5886-5900},
+keywords = {BENZENE; NAPHTHALENE; ABSORPTION SPECTROSCOPY; EXCITED
+STATES; POLARIZATION; PROPAGATOR; OSCILLATOR STRENGTHS; TRIPLETS;
+PERTURBATION THEORY},
+url = {http://link.aip.org/link/?JCP/105/5886/1},
+doi = {10.1063/1.472430}
+}
+
+
+@Article{mjgppbthdjtjcp128,
+  author =   {M. J. G. Peach and P. Benfield and T. Helgaker and D. J.  Tozer},
+  title  =   {Excitation energies in density functional theory: An evaluation and a diagnostic test},
+  journal =  jcp,
+  year =     {2008},
+  volume =   {128},
+  pages =    {044118}
+}
 
 @Article{mptskrarjcp121,
   author =   {M.~Pecul and T.~Saue and K.~Ruud and A.~Rizzo},
+  title  =   {Electric field effects on the shielding constants of noble
+gases: A four-component relativistic Hartree-Fock study},
   journal =  jcp,
   year =     {2004},
   volume =   {121},
-  pages =    {xxxx}
+  pages =    {3051}
 }
 
 @ARTICLE{tbpaehcpl246,
@@ -2481,11 +2531,10 @@ circular dichroism.},
   author =   {C.~Angeli and S.~Borini and R.~Cimiraglia},
   title =    {An application of second-order n-electron valence state perturbation
                   theory (NEVPT2) to the calculation of excited states},
-  note =     {{\emph{ Theor.~Chem.~Acc.}}, submitted},
-  OPTkey =   {},
-  OPTmonth =     {},
-  OPTyear =      {},
-  OPTannote =    {}
+  journal =  tcan,
+  volume  =  111,
+  year    =  2004,
+  pages   = {352--357}
 }
 
 @ARTICLE{paololazz1,
@@ -2625,8 +2674,7 @@ Methods}",
    YEAR      ="2006"}
 
 @article{nmr08-jcp129-064111,
-   AUTHOR    ="Benedikt, U. and Auer, A. A. and Jensen,
-F.",
+   AUTHOR    ="Benedikt, U. and Auer, A. A. and Jensen, F.",
    TITLE     ="{Optimization of augmentation functions for
 correlated calculations of spin-spin coupling constants and
 related properties}",
