Small improvement of .CM FUN description based on Stephan's question on dalton-wizards recently and Sonia's response.

--- a/DALTON/Doc/General.tex
+++ b/DALTON/Doc/General.tex
@@ -1321,8 +1321,8 @@ for all quantum up to and including \verb|LCMMAX| will be generated
 start- and ending quantum number for the Rydberg basis functions. The
 basis functions will be placed at the position of a dummy center
 indicated as \verb|X| in the \verb|MOLECULE.INP| file. The charge of
-the ion-core is determined by the keyword \Key{ZCMVAL}. If no center
-named \verb|X| is present in the \verb|MOLECULE.INP| file,
+the ion-core is determined by the keyword \Key{ZCMVAL} (default: +1).
+If no center named \verb|X| is present in the \verb|MOLECULE.INP| file,
 this input will be ignored.
 
 \item[\Key{MAXPRI}]\verb| |\newline
@@ -1372,7 +1372,7 @@ in the automatic symmetry detection routines. Default is $5.0\cdot
 \item[\Key{ZCMVAL}]\verb| |\newline
 \verb|READ (LUCMD,*) ZCMVAL|
 
-Read the charge of the center of the Rydberg basis functions specified
+Read the charge of the ion-core center for the Rydberg basis functions specified
 by the \Key{CM FUN} keyword. Default is a charge of one.
 
 \end{description}
