two small corrections to the Dalton manual

--- a/DALTON/Doc/Install.tex
+++ b/DALTON/Doc/Install.tex
@@ -120,9 +120,7 @@ the user will be asked if 64-bit integers should be used throughout the program.
 integers but in some cases it may be advantageous and/or compulsory 
 to use 64-bit integers, e.g., memory allocation for more than 16Gbytes  
 of scratch-memory (see also next paragraph) and execution of some modules 
-with more than 255 basis functions. {\textcolor{red}{\em @Hans J{\o}rgen: 
-should we add examples of modules which require 64-bit when 
-$\geq$\ 255 basis functions are being used?}}
+with more than 255 basis functions.
 
 \item Scratch memory\index{scratch memory}\index{installation!memory}
 size: Dalton uses approximately 6.5 Mwords (54 Mbytes)
